--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  "dev": "vite",
   "name": "ogl",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -12,12 +13,12 @@
   "dependencies": {
     "json-server": "^1.0.0-beta.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^22.10.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -27,6 +28,7 @@
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.7",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
