--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,32 @@
 {
-	"compilerOptions": {
-		"outDir": "./dist/",
-		"baseUrl": ".",
-		"paths": {
-			"src/*": ["src/*"],
-			":app/*": ["src/app/*"],
-			":components/*": ["src/components/*"],
-			":pages/*": ["src/pages/*"]
-		},
-		"composite": true,
-		"moduleResolution": "bundler",
-		"module": "preserve",
-		"allowSyntheticDefaultImports": true,
-		"jsx": "react-jsx"
-	},
-	"include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"]
+  "compilerOptions": {
+    "outDir": "./dist/",
+    "baseUrl": ".",
+    "paths": {
+      "src/*": [
+        "src/*"
+      ],
+      ":app/*": [
+        "src/app/*"
+      ],
+      ":components/*": [
+        "src/components/*"
+      ],
+      ":pages/*": [
+        "src/pages/*"
+      ]
+    },
+    "composite": true,
+    "moduleResolution": "bundler",
+    "module": "preserve",
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react-jsx",
+    "strictNullChecks": true,
+    "strict": true,
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.d.ts"
+  ]
 }
