--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
