--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,28 +3,18 @@
     "outDir": "./dist/",
     "baseUrl": ".",
     "paths": {
-      "src/*": [
-        "src/*"
-      ],
-      "app/*": [
-        "src/app/*"
-      ],
-      "components/*": [
-        "src/components/*"
-      ],
-      "pages/*": [
-        "src/pages/*"
-      ],
+      "src/*": ["src/*"],
+      ":app/*": ["src/app/*"],
+      ":components/*": ["src/components/*"],
+      ":pages/*": ["src/pages/*"]
     },
     "composite": true,
     "moduleResolution": "bundler",
     "module": "preserve",
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
+    "strictNullChecks": true,
+    "strict": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.d.ts",
-  ],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts"]
 }
