--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pretty": "prettier --write ."
   },
   "dependencies": {
+    "@mui/base": "^5.0.0-beta.68",
     "json-server": "^1.0.0-beta.3",
     "postcss-nested": "^7.0.2",
     "react": "19.0.0",
