--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-server": "^1.0.0-beta.3",
     "postcss-nested": "^7.0.2",
     "react": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1"
   },
