--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "json-server": "^1.0.0-beta.3",
     "postcss-nested": "^7.0.2",
     "react": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1"
   },
   "devDependencies": {
+    "@emotion/styled": "^11.14.0",
     "@eslint/js": "^9.17.0",
+    "@mui/styled-engine": "^6.4.0",
     "@types/node": "^22.10.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "eslint": "^9.18.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -38,6 +42,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.7",
+    "vite-plugin-restart": "^0.4.2",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
