--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mui/base": "^5.0.0-beta.68",
+    "@tanstack/react-router": "^1.99.13",
     "json-server": "^1.0.0-beta.3",
     "postcss-nested": "^7.0.2",
     "react": "19.0.0",
@@ -24,6 +25,8 @@
     "@emotion/styled": "^11.14.0",
     "@eslint/js": "^9.17.0",
     "@mui/styled-engine": "^6.4.0",
+    "@tanstack/router-devtools": "^1.99.13",
+    "@tanstack/router-plugin": "^1.99.14",
     "@types/node": "^22.10.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
